# tpchgen-rs

./: .gitignore  .typos.toml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md
tpcdsgen/: .gitignore  Cargo.toml  README.md
tpcdsgen/scripts/: README.md  benchmark.sh  compare-table.sh  generate-fixtures.sh  test-all-tables.sh
tpcdsgen/src/: join_key_utils.rs  lib.rs  main.rs  output.rs  table.rs  table_flags.rs
tpcdsgen/src/column/: customer_address_column.rs  customer_column.rs  dbgen_version.rs  inventory_column.rs  mod.rs
tpcdsgen/src/config/: options.rs  scaling.rs  session.rs
tpcdsgen/src/distribution/: calendar_distribution.rs  embedded_data.rs  file_loader.rs  int_values.rs  items_distributions.rs  mod.rs  utils.rs
tpcdsgen/src/generator/: catalog_page_generator_column.rs  catalog_returns_generator_column.rs  catalog_sales_generator_column.rs  customer_address_generator_column.rs  customer_generator_column.rs  dbgen_version_generator_column.rs  inventory_generator_column.rs  item_generator_column.rs  mod.rs  store_generator_column.rs  store_returns_generator_column.rs  store_sales_generator_column.rs  web_returns_generator_column.rs  web_sales_generator_column.rs
tpcdsgen/src/random/: generator.rs
tpcdsgen/src/row/: abstract_row_generator.rs  call_center_row_generator.rs  catalog_page_row.rs  catalog_page_row_generator.rs  catalog_returns_row.rs  catalog_returns_row_generator.rs  catalog_sales_row.rs  catalog_sales_row_generator.rs  customer_address_row.rs  customer_address_row_generator.rs  customer_demographics_row_generator.rs  customer_row.rs  customer_row_generator.rs  date_dim_row_generator.rs  dbgen_version_row.rs  dbgen_version_row_generator.rs  generated_row.rs  household_demographics_row_generator.rs  income_band_row_generator.rs  inventory_row.rs  inventory_row_generator.rs  item_row.rs  item_row_generator.rs  mod.rs  promotion_row_generator.rs  reason_row_generator.rs  row_generator.rs  (+16 more)
tpch-mysql/: .gitignore  README.md  pyproject.toml
tpchgen-mysql-cli/: Cargo.toml  README.md
tpchgen-mysql-cli/src/: main.rs  queries.rs  schema.rs
tpchgen-py/: .gitignore  Cargo.toml  pyproject.toml
tpchgen-py/src/: lib.rs
(+37 files in other folders)
