[package]
name = "tpchgen-mysql-cli"
version = "0.1.0"
authors = { workspace = true }
description = "Generate TPC-H data with tpchgen-cli and load/run on MySQL."
readme = "README.md"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "tpch-mysql"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.32", features = ["derive"] }
mysql = { version = "25.0.1", default-features = false, features = ["default-rustls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
tpchgen-cli = { path = "../tpchgen-cli", version = "2.0.2" }
