[package]
name = "tpchgen-py"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "tpchgen"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.5", features = ["extension-module"] }
tokio = { version = "1.44.1", default-features = false, features = ["rt-multi-thread"] }
tpchgen-cli = { path = "../tpchgen-cli" }
